centered card commit

--- a/index.html
+++ b/index.html
@@ -10,17 +10,69 @@
   <title>Dropbox</title>
 </head>
 <body>
+  <!-- HEADER -->
+  <header class="debug clearfix">
+    
+    <div class="float-left w50 debug h100">menus-x</div>
+    <div class="float-left w50 debug h100">menu-dx</div>
 
-  <header></header>
-  <div class="jumbotron"></div>
+  </header>
+  <!-- /HEADER -->
+
+
+  <!-- JUMBOTRON -->
+  <div class="jumbotron debug">
+
+    <div class="containersml clearfix  debug h500">
+      <!-- TITOLO -->
+      <h1>lorem500</h1>
+      <div class="debug w50 float-left h100"></div>
+      <div class="debug w50 float-left h100"></div>
+
+    </div>
+
+  </div>
+  <!-- /JUMBOTRON -->
+
+
+
+
+
+  <!--MAIN  -->
   <main>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+
+    <section class="debug h500">
+      
+      <div class="containersml h500 debug clearfix">
+
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit!</h2>
+
+        <div class="card float-left debug h100">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ipsum sequi, aliquam fuga nemo voluptas sit libero reprehenderit dolorum vero natus obcaecati ratione pariatur possimus, porro, aperiam laborum sapiente quod laudantium blanditiis molestias inventore. Id consectetur minus exercitationem, atque optio facilis dicta quidem? Vero quam ipsa aut, quidem sunt est libero distinctio ipsam? Dolore dicta eaque repellat cupiditate impedit veniam temporibus cum excepturi tenetur magnam maiores esse quaerat nam error perferendis, at aperiam aliquid in, ullam aliquam dignissimos suscipit, beatae et veritatis? Maiores repudiandae quam est officia consequatur officiis doloribus saepe blanditiis. Natus quos sint harum asperiores? Aliquid, similique sint?</div>
+        <div class="card  float-left debug h100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias eaque dicta ipsam modi at ullam quibusdam et dolorum. Harum dolorem dicta veniam nobis modi quos expedita autem distinctio fugiat rerum! Eveniet ea nihil omnis nostrum est doloremque iusto obcaecati, facilis praesentium dolores impedit, quisquam magnam error consectetur, deleniti repellendus adipisci. Aliquam, optio dolorum! Vel sunt illo, rem recusandae quis quod nisi ex tempora eos, nobis omnis eaque explicabo dolorum? Autem, voluptas laborum excepturi soluta earum culpa facere omnis fugiat dolore veritatis blanditiis maxime totam eveniet asperiores quaerat voluptates sed expedita animi ex a sapiente quidem iusto. Quasi beatae consequuntur suscipit.
+        </div>
+        <div class="card float-left  debug h100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, odit. Veritatis nulla voluptas impedit mollitia totam deserunt. Provident ducimus nostrum dignissimos non facilis dolorum, temporibus deleniti debitis. Reiciendis consequuntur minus tenetur aperiam, quaerat ex? Dignissimos iste, natus id ab ducimus nesciunt itaque temporibus repellendus, necessitatibus recusandae provident assumenda neque suscipit odit illum soluta placeat hic molestias numquam. Numquam, non? Qui explicabo cumque, temporibus quod eveniet facere incidunt libero sit repellat maiores, quia commodi? Laboriosam, quo, modi quia fuga optio itaque ipsa perspiciatis ipsum iste voluptatem eaque distinctio autem tempore ea illo magni id quis corporis! Odio amet autem ut! Molestias.
+
+        </div>
+      </div>
+
+
+    </section>
+
+
+
+
+
+    <section class="debug h300"></section>
+    <section class="debug h500"></section>
+    <section class="debug h500"></section>
+    <section class="debug h300"></section>
   </main>
+  <!--MAIN  -->
+
+
+  <!-- FOOTER -->
   <footer></footer>
+  <!--/ FOOTER -->
   
 </body>
 </html>
