--- a/index.html
+++ b/index.html
@@ -11,11 +11,32 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header class="debug clearfix">
-    
-    <div class="float-left w50 debug h100">menus-x</div>
-    <div class="float-left w50 debug h100">menu-dx</div>
-
+  <header class="clearfix">
+    <!-- HEADER MENU LEFT -->
+    <div class="float-left w50"> 
+      <nav class="menu left float-left">
+        <ul>
+        <li>
+        <img class="float-left" src="img/logo-small.png" alt="">
+        </li>
+          <li><a href="#">Perch&eacute; Dropbox?</a></li>
+          <li><a href="#">Funzioni</a></li>
+          <li><a href="#">Piani e Prezzi</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!-- HEADER MENU RIGHT -->
+    <div class="float-left w50">
+      <nav class="menu right float-left">
+        <ul>
+          <li><a href="#">Supporto</a></li>
+          <li><a href="#">Contatta l'ufficio vendite</a></li>
+          <li><a href="#">Accedi</a></li>
+          <li><a href="#">Inizia</a></li>
+        </ul>
+      </nav>
+    </div>
+    </div>
   </header>
   <!-- /HEADER -->
 
@@ -130,7 +151,7 @@
   <!-- FOOTER -->
   <footer class="debug clearfix h500">
 
-    <nav class="float-left debug hw100">
+    <nav class="footernav float-left debug hw100">
       <ul>
         <li></li>
         <li></li>
@@ -141,7 +162,7 @@
       </ul>
     </nav>
 
-    <nav class="float-left debug hw100">
+    <nav class="footernav float-left debug hw100">
       <ul>
         <li></li>
         <li></li>
@@ -151,7 +172,7 @@
         <li></li>
       </ul>
     </nav>
-    <nav class="float-left debug hw100">
+    <nav class="footernav float-left debug hw100">
       <ul>
         <li></li>
         <li></li>
@@ -161,7 +182,7 @@
         <li></li>
       </ul>
     </nav>
-    <nav class="float-left debug hw100">
+    <nav class="footernav float-left debug hw100">
       <ul>
         <li></li>
         <li></li>
@@ -171,7 +192,7 @@
         <li></li>
       </ul>
     </nav>
-    <nav class="float-left debug hw100">
+    <nav class="footernav float-left debug hw100">
       <ul>
         <li></li>
         <li></li>
