--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="utilities.css">
@@ -13,7 +14,7 @@
   <!-- HEADER -->
   <header class="clearfix">
     <!-- HEADER MENU LEFT -->
-    <div class="float-left w50"> 
+    <div class="float-left menubox"> 
       <nav class="menu left float-left">
         <ul>
         <li>
@@ -26,7 +27,7 @@
       </nav>
     </div>
     <!-- HEADER MENU RIGHT -->
-    <div class="float-left w50">
+    <div class="float-left menubox">
       <nav class="menu right float-left">
         <ul>
           <li><a href="#">Supporto</a></li>
@@ -41,13 +42,23 @@
   <!-- /HEADER -->
 
   <!-- JUMBOTRON -->
-  <div class="jumbotron debug">
+  <div class="jumbotron">
 
-    <div class="containersml clearfix  debug h500">
+    <div class="containersml clearfix">
       <!-- TITOLO -->
-      <h1>lorem500</h1>
-      <div class="debug w50 float-left h100"></div>
-      <div class="debug w50 float-left h100"></div>
+      <h1>Tutto ci&ograve; che ti serve per il lavoro,<br>in un unico posto</h1>
+      <div class="jumbotext float-left">
+        <p> Finalmente tutti i tuoi strumenti, contenuti e <br> collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business &egrave; pi&uacute; di uno spazio di <br> archiviazione sicuro: &eacute; un modo intelligente e <br> integrato per ottimizzare il flusso di lavoro esistente.</p>
+        <div class="button">
+          <a href="#">Inizia la tua prova gratuita</a>
+        </div>
+        <p>Annulla in qualsiasi momento</p>
+        <i class="fa-solid fa-arrow-down"></i>
+      </div>
+      <!-- JUMBOTRON IMG -->
+      <div class="jumboimg float-left">
+        <img src="img/jumbo.png" alt="">
+      </div>
 
     </div>
 
