--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
 
       <div class="containersml h500 debug clearfix">
         <h2>Esegui piu operazioni con dropbox business</h2>
-        <div class="debug w50 float-left h100"></div>
-        <div class="debug w50 float-left h100"></div>
-        <div class="debug w50 float-left h100"></div>
-        <div class="debug w50 float-left h100"></div>
-        <div class="debug w50 float-left h100"></div>
-        <div class="debug w50 float-left h100"></div>
+        <div class="debug operations w50 float-left h100"></div>
+        <div class="debug operations w50 float-left h100"></div>
+        <div class="debug operations w50 float-left h100"></div>
+        <div class="debug operations w50 float-left h100"></div>
+        <div class="debug operations w50 float-left h100"></div>
+        <div class="debug operations w50 float-left h100"></div>
         <h2>Piu di 500.000 team utilizzano dropbox business</h2>
       </div>
     </section>
