start sponsor section

--- a/index.html
+++ b/index.html
@@ -229,27 +229,80 @@
     <!-- /FIND A PARTNER SECTION -->
 
     <!-- DROPBOX OPERATIONS -->
-    <section class="debug h500">
+    <section class="h500">
 
-      <div class="containersml h500 debug clearfix">
+      <div class="containersml ops clearfix">
         <h2>Esegui piu operazioni con dropbox business</h2>
-        <div class="debug operations w50 float-left h100"></div>
-        <div class="debug operations w50 float-left h100"></div>
-        <div class="debug operations w50 float-left h100"></div>
-        <div class="debug operations w50 float-left h100"></div>
-        <div class="debug operations w50 float-left h100"></div>
-        <div class="debug operations w50 float-left h100"></div>
-        <h2>Piu di 500.000 team utilizzano dropbox business</h2>
+        <!-- BLOCCHI OPERAZIONI -->
+        <!-- #1 -->
+        <div class="operations float-left">
+          <div class="operations img">
+            <img src="img/business-feature-switching-tools.png" alt="">
+          </div>
+          <h3>Passa di meno da uno <br> strumento all'altro</h3>
+          <p>Porta a termine le attivita' quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e Presentazioni di Google, file <br> Microsoft Office e <u>Dropbox Paper</u> <br> direttamente da Dropbox.</p>
+        </div>
+        <!-- /#1 -->
+        <!-- #2 -->
+        <div class="operations float-left h100">
+          <div class="operations img">
+            <img src="img/business-feature-coordinate-it.png" alt="">
+          </div>
+          <h3>Passa di meno da uno <br> strumento all'altro</h3>
+          <p>Porta a termine le attivita' quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e Presentazioni di Google, file <br> Microsoft Office e <u>Dropbox Paper</u> <br> direttamente da Dropbox.</p>
+        </div>
+        <!-- #2 -->
+        <!-- #3 -->
+        <div class="operations float-left h100">
+          <div class="operations img">
+            <img src="img/business-feature-multi-device.png" alt="">
+          </div>
+          <h3>Passa di meno da uno <br> strumento all'altro</h3>
+          <p>Porta a termine le attivita' quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e Presentazioni di Google, file <br> Microsoft Office e <u>Dropbox Paper</u> <br> direttamente da Dropbox.</p>
+        </div>
+        <!--/ #3 -->
+        <!-- #4 -->
+        <div class="operations float-left h100">
+          <div class="operations img">
+            <img src="img/business-feature-integrations-it.png" alt="">
+          </div>
+          <h3>Passa di meno da uno <br> strumento all'altro</h3>
+          <p>Porta a termine le attivita' quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e Presentazioni di Google, file <br> Microsoft Office e <u>Dropbox Paper</u> <br> direttamente da Dropbox.</p>
+        </div>
+        <!--/ #4 -->
+        <!-- #5-->
+        <div class="operations float-left h100">
+          <div class="operations img">
+            <img src="img/business-feature-send-files-it.png" alt="">
+          </div>
+          <h3>Passa di meno da uno <br> strumento all'altro</h3>
+          <p>Porta a termine le attivita' quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e Presentazioni di Google, file <br> Microsoft Office e <u>Dropbox Paper</u> <br> direttamente da Dropbox.</p>
+        </div>
+        <!-- #6-->
+        <div class="operations float-left h100">
+          <div class="operations img">
+            <img src="img/business-feature-security.png" alt="">
+          </div>
+          <h3>Passa di meno da uno <br> strumento all'altro</h3>
+          <p>Porta a termine le attivita' quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e Presentazioni di Google, file <br> Microsoft Office e <u>Dropbox Paper</u> <br> direttamente da Dropbox.</p>
+        </div>
+        <!-- /#6-->
       </div>
+      
     </section>
     <!-- DROPBOX OPERATIONS -->
 
     <!-- SPONSOR SECTION -->
-    <section class="debug">
+    <section>
 
-      <div class="sponsor-container clearfix debug h500 ">
+      <div class="sponsor-container clearfix  h500 ">
         <!-- SPONSOR TOP -->
-        <div class="sponsor-top debug clearfix">
+        <div class="containersml">
+          <div class="end title">
+            <h2>Piu di 500.000 team <br> utilizzano dropbox business</h2>
+            <span><a href="# ">Scopri di pi&uacute; sui nostri clienti</a></span>
+          </div>
+        </div>
           <div class="sponsor-box float-left">
             <div class="float-left debug hw50"></div>
             <div class="float-left debug hw50"></div>
