--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
           </div>
           <!-- SPONSOR DESCRIPTION -->
-          <div style="overflow-y: scroll;" class="sponsor-description-box float-left  h100">
+          <div style="overflow: auto;" class="sponsor-description-box float-left  h100">
             <div class="designitlogo">
               <img src="img/designit.svg" alt="">
               <div class="grey-line"></div>
@@ -394,9 +394,34 @@
 
 
     <!-- FAQ -->
-    <section class="containersml debug ">
+    <section class="containersml faq">
       <h2>Domande Frequenti</h2>
-      <div class="debug h300"></div>
+      <div class="h300">
+        <div class="question">
+          <div class="question text">
+            <h4>Qual &eacute; la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+        </div>
+        <div class="question">
+          <div class="question text">
+            <h4>Qual &eacute; la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+        </div>
+        <div class="question">
+          <div class="question text">
+            <h4>Qual &eacute; la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+        </div>
+        <div class="question">
+          <div class="question text">
+            <h4>Qual &eacute; la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- /FAQ -->
 
