text/buttons alignment

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li><p>/mese</p></li>
             <li><i class="fa-regular fa-user"></i> 1 Utente</li>
             <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
-            <li><i class="fas fa-pencil"></i> Funzioni di produttivit&agrave; premium <br> e condivisione file semplice e sicura</li>
+            <li><i class="fas fa-pencil"></i> Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura</li>
           </ul>
 
           <div class="free-trial button">
@@ -125,7 +125,7 @@
             <li><h2>Standard</h2></li>
             <li><p>19,99 &euro;</p></li>
             <li><p>/utente/mese,a partire da 3 utenti</p></li>
-            <li><i class="fa-regular fa-user"></i> +1 Utente</li>
+            <li><i class="fa-solid fa-user-plus"></i>1 Utente</li>
             <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
             <li><i class="fa-regular fa-face-smile"></i></i> Funzioni di produttivit&agrave; premium <br> e condivisione file semplice e sicura</li>
           </ul>
@@ -163,7 +163,7 @@
             <li><h2>Advanced</h2></li>
             <li><p>19,99 &euro;</p></li>
             <li><p>/utente/mese,a partire da 3 utenti</p></li>
-            <li><i class="fa-regular fa-user"></i> 1 Utente</li>
+            <li><i class="fa-solid fa-user-plus"></i> 1 Utente</li>
             <li><i class="fa-regular fa-face-smile"></i> 3 TB di spazio di archiviazione sicuro</li>
             <li><i class="fas fa-pencil"></i> Funzioni di produttivit&agrave; premium <br> e condivisione file semplice e sicura</li>
           </ul>
@@ -230,7 +230,7 @@
     <!-- /FIND A PARTNER SECTION -->
 
     <!-- DROPBOX OPERATIONS -->
-    <section class="h500">
+    <section>
 
       <div class="containersml ops clearfix">
         <h2>Esegui piu operazioni con dropbox business</h2>
@@ -396,7 +396,7 @@
     <!-- FAQ -->
     <section class="containersml faq">
       <h2>Domande Frequenti</h2>
-      <div class="h300">
+      <div>
         <div class="question">
           <div class="question text">
             <h4>Qual &eacute; la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
@@ -446,7 +446,7 @@
         <div class="languages" >
           <i class="fa-solid fa-earth-americas"></i>
           <p> Italiano </p> 
-            i class="arrow fa-solid fa-sort-up"></i>
+            <i class="arrow fa-solid fa-sort-up"></i>
         </div>
           
        
