--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="menu left float-left">
         <ul>
           <li>
-           <img class="float-left" src="img/logo-small.png" alt="">
+           <img src="img/logo-small.png" alt="">
           </li>
           <li><a href="#">Perch&eacute; Dropbox?</a></li>
           <li><a href="#">Funzioni</a></li>
@@ -69,10 +69,10 @@
       <div class="containersml plan clearfix">
         <h2>Trova il piano Dropbox Business che fa per te</h2>
         <div class="radiobuttons">
-          <div class="circle blueborder"></div>
+          <div class="circle blueborder float-left"></div>
           <p>Fatturazione mensile</p>
           
-          <div class="circle"></div>
+          <div class="circle float-left"></div>
           <p>Fatturazione Annuale</p>
         </div>
         <!-- /FIRST CARD -->
@@ -414,8 +414,8 @@
           <li><a href="">Funzioni</a></li>
         </ul>
         <hr>
-        <div class="languages" >
-          <i class="fa-solid fa-earth-americas"></i>
+        <div class="languages clearfix">
+          <i class="world fa-solid fa-earth-americas"></i>
           <p> Italiano </p> 
             <i class="arrow fa-solid fa-sort-up"></i>
         </div>
